[tool.poetry]
name = "pywenku8api"
version = "0.1.0"
description = ""
authors = ["世界观察日志 <wolchannel@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
curl-cffi = "^0.14.0"
beautifulsoup4 = "^4.14.3"
lxml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
