[tool.poetry]
name = "pywenku8api"
version = "0.1.0"
description = ""
authors = ["世界观察日志 <wolchannel@proton.me>"]
readme = "README.md"
packages = [
    { include = "wenku8" }
]

[tool.poetry.dependencies]
python = "^3.11"
curl-cffi = "^0.14.0"
lxml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
